<resources>
    <string name="app_name">ProjetoIntegrador</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_search">Pesquisar por um filme...</string>
    <string name="movie_title">Movie title</string>
    <string name="movie_img_description">movie banner picture</string>
    <string name="heart_icon_description">heart icon</string>
    <string name="star_icon_description">star icon</string>
    <string name="movie_rating">81%</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_avaluation">Avaliação dos usuários</string>
    <string name="synopsis">Sinopse</string>
    <string name="cast">Elenco</string>
    <string name="movie_synopsis">American car designer Carroll Shelby and driver Kn Miles battle corporate interference and the laws of physics to build a revolutionary race car for Ford in order.</string>
    <string name="duration">2h 32min</string>
    <string name="role">Director</string>
    <string name="person_name">Rain</string>
    <string name="year_released">2019</string>
    <string name="users_rating_txt">Avaliação dos usuários</string>
    <string name="age_restriction">PG-13</string>
    <string name="movie_not_found">Esse filme não existe</string>
    <string name="couldnt_find">Não conseguimos encontrar o filme que você procura. Por favor, refaça sua busca.</string>
    <string name="floating_btn_description">return to previous page button</string>
    <string name="movie_poster_description">movie poster</string>
    <string name="star_rating_description">star rating</string>
    <string name="search_button_description">search button</string>
    <string name="search_mode">Modo pesquisa</string>
    <string name="return_to_home">Voltar ao início</string>
</resources>