<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardElevation="20dp"
        card_view:cardBackgroundColor="@android:color/black"
        card_view:cardCornerRadius="40dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">
        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="260dp"
            android:layout_height="390dp"
            android:src="@drawable/img_exemplo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_img_description" />
        <!--alterar o src pras imagens q vem da api-->
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/titleMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:text="@string/movie_title"
        android:textColor="@color/bigTextColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cvImage"
        app:layout_constraintStart_toStartOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/cvImage" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xsmall"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="@+id/titleMovie"
        app:layout_constraintStart_toEndOf="@+id/titleMovie"
        app:layout_constraintTop_toTopOf="@+id/titleMovie"
        android:contentDescription="@string/heart_icon_description" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xsmall"
        android:visibility="invisible"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintBottom_toBottomOf="@+id/titleMovie"
        app:layout_constraintStart_toEndOf="@+id/titleMovie"
        app:layout_constraintTop_toTopOf="@+id/titleMovie"
        android:contentDescription="@string/heart_icon_description" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/medium"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintEnd_toEndOf="@+id/cvImage"
        app:layout_constraintStart_toStartOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/titleMovie"
        android:contentDescription="@string/star_icon_description" />

    <TextView
        android:id="@+id/rateMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:layout_marginStart="@dimen/medium"
        android:text="@string/movie_rating"
        app:layout_constraintEnd_toEndOf="@+id/cvImage"
        app:layout_constraintStart_toStartOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/titleMovie" />



</androidx.constraintlayout.widget.ConstraintLayout>